--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -425,12 +425,12 @@
                                 <color key="textColor" red="0.34414859689999999" green="0.15941870590000001" blue="0.075782483659999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tap to rename this capture" textAlignment="center" minimumFontSize="17" background="textfield.png" clearButtonMode="whileEditing" id="Sjq-66-pFm">
-                                <rect key="frame" x="37" y="203" width="246" height="25"/>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="Tap to rename this capture" textAlignment="center" minimumFontSize="17" background="textboarder.png" clearButtonMode="whileEditing" id="Sjq-66-pFm">
+                                <rect key="frame" x="37" y="209" width="246" height="25"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="textColor" red="0.34414859689999999" green="0.15941870590000001" blue="0.075782483659999997" alpha="1" colorSpace="calibratedRGB"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits" autocapitalizationType="words"/>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="words" returnKeyType="done"/>
                                 <connections>
                                     <outlet property="delegate" destination="zld-xc-Htz" id="GQn-4T-R1V"/>
                                 </connections>
@@ -462,7 +462,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <view hidden="YES" opaque="NO" alpha="0.80000001192092896" contentMode="scaleToFill" id="WUD-gT-gTP">
-                                <rect key="frame" x="0.0" y="264" width="320" height="460"/>
+                                <rect key="frame" x="0.0" y="-50" width="320" height="460"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Uploading Video..." lineBreakMode="tailTruncation" minimumFontSize="10" id="cZm-XX-6TM">
@@ -545,7 +545,7 @@
         <image name="recordOFF.png" width="33" height="33"/>
         <image name="recorddown.png" width="125" height="53"/>
         <image name="recordup.png" width="125" height="53"/>
-        <image name="textfield.png" width="330" height="50"/>
+        <image name="textboarder.png" width="492" height="50"/>
         <image name="uploadDown.png" width="386" height="85"/>
         <image name="uploadUp.png" width="386" height="85"/>
     </resources>
