--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -82,6 +82,12 @@
                             <view contentMode="scaleToFill" id="Ui9-go-TNU">
                                 <rect key="frame" x="0.0" y="-20" width="320" height="480"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                <subviews>
+                                    <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" image="LaunchImage@2x.png" id="WhD-lN-5Mf">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="480"/>
+                                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                                    </imageView>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
                             <activityIndicatorView hidden="YES" opaque="NO" contentMode="scaleToFill" hidesWhenStopped="YES" style="whiteLarge" id="GlC-H5-Cku">
@@ -523,6 +529,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="LaunchImage@2x.png" width="640" height="960"/>
         <image name="arrowIcon.png" width="66" height="66"/>
         <image name="backDown.png" width="121" height="100"/>
         <image name="backUp.png" width="121" height="100"/>
