--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11D50b" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="1.1" toolsVersion="2182" systemVersion="11E53" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" initialViewController="2">
     <dependencies>
         <deployment defaultVersion="1296" identifier="iOS"/>
         <development defaultVersion="4200" identifier="xcode"/>
@@ -95,7 +95,7 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </activityIndicatorView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="compassface.png" id="8qy-zs-qbn">
-                                <rect key="frame" x="-10" y="395" width="339" height="339"/>
+                                <rect key="frame" x="-10" y="393" width="339" height="339"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="compassCenter.png" id="ANl-di-roc">
@@ -103,26 +103,26 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="compassFrame.png" id="B7E-mw-4MJ">
-                                <rect key="frame" x="0.0" y="375" width="320" height="85"/>
+                                <rect key="frame" x="9" y="375" width="300" height="85"/>
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="Urv-eC-19d">
-                                <rect key="frame" x="127" y="427" width="67" height="33"/>
+                                <rect key="frame" x="59" y="419" width="199" height="41"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" backgroundImage="recordup.png">
+                                <state key="normal" backgroundImage="recordUP.png">
                                     <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
                                     <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
-                                <state key="highlighted" backgroundImage="recorddown.png">
+                                <state key="highlighted" backgroundImage="recordDOWN.png">
                                     <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 </state>
                                 <connections>
                                     <action selector="recordButtonPressed:" destination="Tks-0X-fok" eventType="touchUpInside" id="1Dd-0O-JCi"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="recordOFF.png" id="ftL-Je-xA1">
-                                <rect key="frame" x="150" y="434" width="20" height="20"/>
+                            <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" image="recordON.png" id="ftL-Je-xA1">
+                                <rect key="frame" x="67" y="424" width="183" height="36"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
                         </subviews>
@@ -539,7 +539,7 @@
         <image name="bottomrightdown.png" width="99" height="102"/>
         <image name="bottomrightup.png" width="99" height="102"/>
         <image name="compassCenter.png" width="64" height="65"/>
-        <image name="compassFrame.png" width="640" height="162"/>
+        <image name="compassFrame.png" width="601" height="168"/>
         <image name="compassface.png" width="671" height="671"/>
         <image name="doneDown.png" width="125" height="100"/>
         <image name="doneUp.png" width="125" height="100"/>
@@ -549,9 +549,9 @@
         <image name="imageboarderDown.png" width="330" height="330"/>
         <image name="imageboarderUp.png" width="330" height="330"/>
         <image name="loginUp.png" width="386" height="85"/>
-        <image name="recordOFF.png" width="33" height="33"/>
-        <image name="recorddown.png" width="125" height="53"/>
-        <image name="recordup.png" width="125" height="53"/>
+        <image name="recordDOWN.png" width="398" height="72"/>
+        <image name="recordON.png" width="366" height="65"/>
+        <image name="recordUP.png" width="380" height="72"/>
         <image name="textboarder.png" width="492" height="50"/>
         <image name="uploadDown.png" width="386" height="85"/>
         <image name="uploadUp.png" width="386" height="85"/>
